Closed Bug 1683027 Opened 4 years ago Closed 4 years ago

[GTK][Fcitx5] Redundant `keydown` events may be fired if active IME is Fcitx5 and there is no composition

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P2)

Desktop
Linux
defect

Tracking

()

RESOLVED FIXED
86 Branch
Tracking Status
firefox86 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(1 file)

STR:

  1. install and use fcitx-5-mozc (I tested this with Ikuya-san's binary)
  2. Load https://w3c.github.io/uievents/tools/key-event-viewer.html
  3. Type F9

AR:

There are 2 keydown events and one keyup events. The first keydown event is marked as "processed".

ER:

There should be only a set of keydown and keyup and both of them shouldn't be marked as "processed".

Fcitx5 sets its context name to "fcitx5", not "fcitx". Therefore,
we need to add new check for it to enable the asynchronous keyboard
event handling.

Note that some options for disabling the async handling and
enabling key snooper are not supported so that we can ignore them
at initializing the state.

Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/13f304ed6039 Make `IMContextWrapper` handle keyboard events asynchronously when active IM is Fcitx5 r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: