Bug 1683027 - Make `IMContextWrapper` handle keyboard events asynchronously when active IM is Fcitx5 r=m_kato

Fcitx5 sets its context name to "fcitx5", not "fcitx".  Therefore,
we need to add new check for it to enable the asynchronous keyboard
event handling.

Note that some options for disabling the async handling and
enabling key snooper are not supported so that we can ignore them
at initializing the state.

Differential Revision: https://phabricator.services.mozilla.com/D100075